# delivery_center_container

./: .dockerignore  .gitignore  Dockerfile  README.md  connection.txt  docker-compose.yaml  etl.py  pyproject.toml
reports/: 01_canais_mais_receita.sql  02_media_entrega_cidade.sql  03_analise_entregadores.sql  04_valor_medio_tipo_pagamento.sql  05_lojas_mais_receita_fev_mar.sql  06_crescimento_mensal_pedidos.sql  07_entregadores_mais_ativos.sql  08_hubs_crescentes_fev_mar.sql  09_razao_entregas_pedidos_lojista.sql  10_top5_lojistas_canal_venda.sql
schema/: schema.sql
